--- a/StockNFC/app/src/main/AndroidManifest.xml
+++ b/StockNFC/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/nfc"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -23,7 +23,6 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
-        <activity android:name=".logIn.Registro" />
         <activity android:name=".logIn.LogIn">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
