--- a/StockNFC/app/src/main/AndroidManifest.xml
+++ b/StockNFC/app/src/main/AndroidManifest.xml
@@ -21,16 +21,22 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".logIn.LogIn">
+        <activity android:name=".logIn.LogIn"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".EscrituraActivity">
+        <activity android:name=".EscrituraActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED" />
                 <action android:name="android.nfc.action.TECH_DISCOVERED" />
@@ -40,7 +46,9 @@
         </activity>
         <activity
             android:name=".ControlStockActivity"
-            android:label="@string/title_activity_control_stock">
+            android:label="@string/title_activity_control_stock"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED" />
                 <action android:name="android.nfc.action.TECH_DISCOVERED" />
